test/syntax-errors/missing-rparen-in-fncall/missing-rparen-in-fncall.foster
main = fn () {
  expect_i1(false)
  print_i1(__COMPILES__ tuple { print_i32 42) } )
}
